Update on question 5 in MBA Data Science/Fundamentals of Statistics/Exercises list

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -68,12 +68,12 @@
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q5 </h2>\n",
     "\n",
-    "(Source: Fávero and Belfiore, 2017, Cap. 5) Assume that there are 3 operations on stomachs daily at a specific hospital. Considering that the probability of operations in a day follows a Poisson distribution, calculate the probability of occurring 28 operations in the next week (7 days) assuming that the probability of operations in a day follows a **Poisson distribution**."
+    "(Source: Fávero and Belfiore, 2017, Cap. 5) At a specific hospital, there are 3 operations on stomachs daily. Assume that the probability of operations in a day follows a Poisson distribution and calculate the probability of occurring 28 operations in the next week (7 days) assuming that the probability of operations in a day follows a **Poisson distribution**."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d8e3d61b",
+   "id": "ffbd9482",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "e16fdab1",
+   "id": "273c2b27",
    "metadata": {},
    "outputs": [
     {
@@ -101,22 +101,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "60ac579c",
+   "execution_count": 145,
+   "id": "ffe0f82f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of occurring 4 operations in a week is 16.80314%\n"
+      "The probability of occurring 4 operations in a day is 16.80314%\n"
      ]
     }
    ],
    "source": [
     "k = 4 # Operations\n",
     "r = 3 # Rate [Operations /  day]\n",
-    "print(\"The probability of occurring {:,d} operations in a week is {:,.5f}%\".format(k, stats.poisson.pmf(k, mu = r)*100))"
+    "print(\"The probability of occurring {:,d} operations in a day is {:,.5f}%\".format(k, stats.poisson.pmf(k, mu = r)*100))"
    ]
   },
   {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea85984a",
+   "id": "28f363ec",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "79bfacea",
+   "id": "d94b00ca",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5444ae1",
+   "id": "da0275b0",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "797c8e3a",
+   "id": "10a76916",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a2a37e41",
+   "id": "fd8f615e",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e1d9cf6",
+   "id": "cc1ac90f",
    "metadata": {},
    "source": [
     "Since the p-value is lower than $ \\alpha $, we reject the null hypothesis with a 5%-level of significance. However, the p-value is very close to $ \\alpha $, which implies we would not reject the null hypothesis if we assume a slightly lower significance."
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bd40e22",
+   "id": "a88f854d",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2b3ffb56",
+   "id": "cc1e1c97",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9d8cc2a2",
+   "id": "eed845f8",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e70bc426",
+   "id": "7de4f3fd",
    "metadata": {},
    "source": [
     "Since $ p_{value} < \\alpha $ ($ 0.039 < 0.05 $), we can reject the null hypothesis with a 5% level of significance. Therefore, we have evidence that the total rainfall depth varies more at A than at B."
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f9f5f6",
+   "id": "cfae6110",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "cf846254",
+   "id": "0d619450",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b445fe22",
+   "id": "b2f9f56d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "728046b5",
+   "id": "4ce6c188",
    "metadata": {},
    "outputs": [
     {
