Update on question 5 in MBA Data Science/Fundamentals of Statistics/Exercises list

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -68,12 +68,12 @@
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q5 </h2>\n",
     "\n",
-    "(Source: Fávero and Belfiore, 2017, Cap. 5) At a specific hospital, there are 3 operations on stomachs daily. Assume that the probability of operations in a day follows a Poisson distribution and calculate the probability of occurring 28 operations in the next week (7 days) assuming that the probability of operations in a day follows a **Poisson distribution**."
+    "(Source: Fávero and Belfiore, 2017, Cap. 5) At a particular hospital, there are three operations on stomachs daily. Assume that the probability of operations in a day follows a **Poisson distribution** and calculate the probability of occurring 28 operations over the next week (7 days)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ffbd9482",
+   "id": "1112f00e",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "273c2b27",
+   "id": "d1ca8bc9",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "ffe0f82f",
+   "id": "9aa79efd",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28f363ec",
+   "id": "e4dcc2ea",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "d94b00ca",
+   "id": "3a2a1f55",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da0275b0",
+   "id": "2d5e8d5c",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "10a76916",
+   "id": "b3a719cd",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "fd8f615e",
+   "id": "92bf6358",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc1ac90f",
+   "id": "10e870ea",
    "metadata": {},
    "source": [
     "Since the p-value is lower than $ \\alpha $, we reject the null hypothesis with a 5%-level of significance. However, the p-value is very close to $ \\alpha $, which implies we would not reject the null hypothesis if we assume a slightly lower significance."
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88f854d",
+   "id": "3d926e5a",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cc1e1c97",
+   "id": "7ef46446",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "eed845f8",
+   "id": "c4c89054",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7de4f3fd",
+   "id": "d6cf9b16",
    "metadata": {},
    "source": [
     "Since $ p_{value} < \\alpha $ ($ 0.039 < 0.05 $), we can reject the null hypothesis with a 5% level of significance. Therefore, we have evidence that the total rainfall depth varies more at A than at B."
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfae6110",
+   "id": "480f5642",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>\n",
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0d619450",
+   "id": "f13dc8c8",
    "metadata": {},
    "outputs": [
     {
@@ -871,54 +871,6 @@
     "b = 2*sample_mean - a\n",
     "\n",
     "print(\"Confidence Interval = ({:,.2f}, {:,.2f})\".format(a, b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2f9f56d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "4ce6c188",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.10483725588365922"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.7576078383294875"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.09020401043104986"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(stats.poisson.pmf(10, mu = 12))\n",
-    "display(1 - stats.poisson.cdf(9, mu = 12))\n",
-    "display(1 - stats.poisson.cdf(1, mu = 12/24))"
    ]
   }
  ],
