Added question 4 in MBA Data Science/Fundamentals of Statistics/Exercises list

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -57,7 +57,66 @@
    "id": "f59983df",
    "metadata": {},
    "source": [
-    "## Q4"
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
+    "<h2> Q4 </h2>\n",
+    "\n",
+    "(Source: Fávero and Belfiore, 2017, Cap. 5) Assume that a student hit three question for each five trials. Determine the probability of a student hit 12 questions in 20 trials."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a2318a",
+   "metadata": {},
+   "source": [
+    "<h3>Answer</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1cf773cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability = 1.35619%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Probability = {:,.5f}%\".format(stats.nbinom.pmf(10 - 3, 12, 3/5)*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f01f6d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1875"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.1875"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(stats.nbinom.pmf(2, 3, 1/2))\n",
+    "display(6*0.5**5)"
    ]
   },
   {
@@ -117,6 +176,27 @@
     "k = 4 # Operations\n",
     "r = 3 # Rate [Operations /  day]\n",
     "print(\"The probability of occurring {:,d} operations in a day is {:,.5f}%\".format(k, stats.poisson.pmf(k, mu = r)*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "af9a16d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.782100987395365e-06"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.1680314)**7"
    ]
   },
   {
