Added question 3 in MBA Data Science/Fundamentals of Statistics/Exercises list

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -49,7 +49,44 @@
    "id": "2c36cf19",
    "metadata": {},
    "source": [
-    "## Q3"
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
+    "<h2> Q3 </h2>\n",
+    "\n",
+    "In a particular game, the probability of success in each new play is 1/6. In 10 plays, what are the following probabilities\n",
+    "\n",
+    "a) Win 4 times <br />\n",
+    "b) Win at least 7 times"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26988ff7",
+   "metadata": {},
+   "source": [
+    "<h3>Answer</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e650d9a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of winning 4 times: 5.42659%\n",
+      "Probability of winning at least 7 times: 0.02675%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Item (a): Win 4 times\n",
+    "print(\"Probability of winning 4 times: {:,.5f}%\".format(stats.binom.pmf(4, 10, 1/6)*100))\n",
+    "\n",
+    "# Item (b): Win at least 7 times\n",
+    "print(\"Probability of winning at least 7 times: {:,.5f}%\".format((1 - stats.binom.cdf(6, 10, 1/6))*100))"
    ]
   },
   {
@@ -65,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a2318a",
+   "id": "c440c280",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>"
@@ -73,50 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "1cf773cd",
+   "execution_count": 18,
+   "id": "c3624c31",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability = 1.35619%\n"
+      "Probability = 10.78235%\n"
      ]
     }
    ],
    "source": [
-    "print(\"Probability = {:,.5f}%\".format(stats.nbinom.pmf(10 - 3, 12, 3/5)*100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "f01f6d59",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1875"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.1875"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(stats.nbinom.pmf(2, 3, 1/2))\n",
-    "display(6*0.5**5)"
+    "print(\"Probability = {:,.5f}%\".format(stats.nbinom.pmf(20 - 12, 12, 3/5)*100))"
    ]
   },
   {
