Added question 2 in MBA Data Science/Fundamentals of Statistics/Exercises list

--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -41,7 +41,533 @@
    "id": "98be9ec8",
    "metadata": {},
    "source": [
-    "## Q2"
+    "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
+    "<h2> Q2 </h2>\n",
+    "\n",
+    "A stock market analyst collected the monthly return on investments (ROI) of two stocks which he intends to indicate to their clients. Calculate the descriptive statistics for the two variables including the correlation between the ROIs. The data with the ROIs is available in the sheet 'Exercício 2' from the file <a href=\"Questions Data.xlsx\">Questions Data.xlsx</a>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5618a8f",
+   "metadata": {},
+   "source": [
+    "<h3>Answer</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "3d7d2956",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Stock 1</th>\n",
+       "      <th>Stock 2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Months</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.0212</td>\n",
+       "      <td>0.2645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.2438</td>\n",
+       "      <td>0.2086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.2296</td>\n",
+       "      <td>0.1248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.2018</td>\n",
+       "      <td>0.0209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.1296</td>\n",
+       "      <td>0.2055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.0615</td>\n",
+       "      <td>0.6260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-0.1591</td>\n",
+       "      <td>-0.1490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.1001</td>\n",
+       "      <td>0.2580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-0.0265</td>\n",
+       "      <td>0.1722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.0776</td>\n",
+       "      <td>0.0199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.0370</td>\n",
+       "      <td>0.4331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.1116</td>\n",
+       "      <td>0.5482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-0.0667</td>\n",
+       "      <td>0.0452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>-0.0082</td>\n",
+       "      <td>-0.1410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.0119</td>\n",
+       "      <td>-0.1059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.1205</td>\n",
+       "      <td>0.4074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.0477</td>\n",
+       "      <td>-0.0056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.2814</td>\n",
+       "      <td>0.1482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>-0.0674</td>\n",
+       "      <td>0.0753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.0762</td>\n",
+       "      <td>0.0899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>-0.1111</td>\n",
+       "      <td>0.0160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>-0.0557</td>\n",
+       "      <td>0.1805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0.1991</td>\n",
+       "      <td>0.0334</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Stock 1  Stock 2\n",
+       "Months                  \n",
+       "1       -0.0212   0.2645\n",
+       "2        0.2438   0.2086\n",
+       "3        0.2296   0.1248\n",
+       "4       -0.2018   0.0209\n",
+       "5        0.1296   0.2055\n",
+       "6        0.0615   0.6260\n",
+       "7       -0.1591  -0.1490\n",
+       "8       -0.1001   0.2580\n",
+       "9       -0.0265   0.1722\n",
+       "10       0.0776   0.0199\n",
+       "11       0.0370   0.4331\n",
+       "12       0.1116   0.5482\n",
+       "13      -0.0667   0.0452\n",
+       "14      -0.0082  -0.1410\n",
+       "15       0.0119  -0.1059\n",
+       "16       0.1205   0.4074\n",
+       "17       0.0477  -0.0056\n",
+       "18       0.2814   0.1482\n",
+       "19      -0.0674   0.0753\n",
+       "20       0.0762   0.0899\n",
+       "21      -0.1111   0.0160\n",
+       "22      -0.0557   0.1805\n",
+       "23       0.1991   0.0334"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read data from the Excel file\n",
+    "df = pd.read_excel(\n",
+    "    \"Questions Data.xlsx\",\n",
+    "    sheet_name = 'Exercício 2',\n",
+    "    index_col = 0,\n",
+    "    usecols = 'A:C',\n",
+    "    nrows = 23,\n",
+    ")\n",
+    "\n",
+    "df.reset_index(inplace = True)\n",
+    "df.rename(columns = {'Meses': 'Months', 'Ação 1': 'Stock 1', 'Ação 2': 'Stock 2'}, inplace = True)\n",
+    "df = df.astype({'Stock 1': 'float64', 'Stock 2': 'float64'})\n",
+    "df.set_index('Months', inplace = True)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "977fd844",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Stock 1</th>\n",
+       "      <th>Stock 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Number of observations</th>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mean</th>\n",
+       "      <td>0.035204</td>\n",
+       "      <td>0.151135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Median</th>\n",
+       "      <td>0.037</td>\n",
+       "      <td>0.1248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mode</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1st quantile</th>\n",
+       "      <td>-0.0612</td>\n",
+       "      <td>0.0204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3rd quantile</th>\n",
+       "      <td>0.11605</td>\n",
+       "      <td>0.2333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8th decile</th>\n",
+       "      <td>0.12596</td>\n",
+       "      <td>0.2619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9th decile</th>\n",
+       "      <td>0.2235</td>\n",
+       "      <td>0.42796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27th decile</th>\n",
+       "      <td>-0.05636</td>\n",
+       "      <td>0.02084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64th decile</th>\n",
+       "      <td>0.076312</td>\n",
+       "      <td>0.1825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Minimum</th>\n",
+       "      <td>-0.2018</td>\n",
+       "      <td>-0.149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maximum</th>\n",
+       "      <td>0.2814</td>\n",
+       "      <td>0.626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Amplitude</th>\n",
+       "      <td>0.4832</td>\n",
+       "      <td>0.775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Variance</th>\n",
+       "      <td>0.016698</td>\n",
+       "      <td>0.041544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Standard deviation</th>\n",
+       "      <td>0.129221</td>\n",
+       "      <td>0.203822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Standard error</th>\n",
+       "      <td>0.026944</td>\n",
+       "      <td>0.0425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Coefficient of Variation</th>\n",
+       "      <td>3.670591</td>\n",
+       "      <td>1.348613</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Stock 1   Stock 2\n",
+       "Number of observations          23        23\n",
+       "Mean                      0.035204  0.151135\n",
+       "Median                       0.037    0.1248\n",
+       "Mode                           NaN       NaN\n",
+       "1st quantile               -0.0612    0.0204\n",
+       "3rd quantile               0.11605    0.2333\n",
+       "8th decile                 0.12596    0.2619\n",
+       "9th decile                  0.2235   0.42796\n",
+       "27th decile               -0.05636   0.02084\n",
+       "64th decile               0.076312    0.1825\n",
+       "Minimum                    -0.2018    -0.149\n",
+       "Maximum                     0.2814     0.626\n",
+       "Amplitude                   0.4832     0.775\n",
+       "Variance                  0.016698  0.041544\n",
+       "Standard deviation        0.129221  0.203822\n",
+       "Standard error            0.026944    0.0425\n",
+       "Coefficient of Variation  3.670591  1.348613"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation (0.29081897658677186, 0.1782207826223213)\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats_df = pd.DataFrame(columns = {'Stock 1', 'Stock 2'})\n",
+    "\n",
+    "# Number of observations\n",
+    "stats_df = stats_df.append(pd.DataFrame({'Stock 1': df['Stock 1'].shape[0], 'Stock 2': df['Stock 2'].shape[0]}, index = ['Number of observations']))\n",
+    "\n",
+    "# Mean\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': df['Stock 1'].mean(), 'Stock 2': df['Stock 2'].mean()},\n",
+    "    index = ['Mean']\n",
+    "))\n",
+    "\n",
+    "# Mean\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': df['Stock 1'].median(), 'Stock 2': df['Stock 2'].median()},\n",
+    "    index = ['Median']\n",
+    "))\n",
+    "\n",
+    "# Mode\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': df['Stock 1'].mode()[0] if df['Stock 1'].mode().shape[0] == 1 else np.nan,\n",
+    "     'Stock 2': df['Stock 2'].mode()[0] if df['Stock 2'].mode().shape[0] == 1 else np.nan},\n",
+    "    index = ['Mode']\n",
+    "))\n",
+    "\n",
+    "# 1st percentile\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': np.percentile(df['Stock 1'], 25), 'Stock 2': np.percentile(df['Stock 2'], 25)},\n",
+    "    index = ['1st quantile']\n",
+    "))\n",
+    "\n",
+    "# 3rd percentile\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': np.percentile(df['Stock 1'], 75), 'Stock 2': np.percentile(df['Stock 2'], 75)},\n",
+    "    index = ['3rd quantile']\n",
+    "))\n",
+    "\n",
+    "# 8th decile\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': np.percentile(df['Stock 1'], 80), 'Stock 2': np.percentile(df['Stock 2'], 80)},\n",
+    "    index = ['8th decile']\n",
+    "))\n",
+    "\n",
+    "# 9th decile\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': np.percentile(df['Stock 1'], 90), 'Stock 2': np.percentile(df['Stock 2'], 90)},\n",
+    "    index = ['9th decile']\n",
+    "))\n",
+    "\n",
+    "# 27th decile\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': np.percentile(df['Stock 1'], 27), 'Stock 2': np.percentile(df['Stock 2'], 27)},\n",
+    "    index = ['27th decile']\n",
+    "))\n",
+    "\n",
+    "# 64th decile\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': np.percentile(df['Stock 1'], 64), 'Stock 2': np.percentile(df['Stock 2'], 64)},\n",
+    "    index = ['64th decile']\n",
+    "))\n",
+    "\n",
+    "# Min value\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': df['Stock 1'].min(), 'Stock 2': df['Stock 2'].min()},\n",
+    "    index = ['Minimum']\n",
+    "))\n",
+    "\n",
+    "# Max value\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': df['Stock 1'].max(), 'Stock 2': df['Stock 2'].max()},\n",
+    "    index = ['Maximum']\n",
+    "))\n",
+    "\n",
+    "# Amplitude\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': stats_df['Stock 1'].loc['Maximum'] - stats_df['Stock 1'].loc['Minimum'],\n",
+    "    'Stock 2': stats_df['Stock 2'].loc['Maximum'] - stats_df['Stock 2'].loc['Minimum']},\n",
+    "    index = ['Amplitude']\n",
+    "))\n",
+    "\n",
+    "# Variance\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': df['Stock 1'].var(), 'Stock 2': df['Stock 2'].var()},\n",
+    "    index = ['Variance']\n",
+    "))\n",
+    "\n",
+    "# Standard deviation\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': df['Stock 1'].std(), 'Stock 2': df['Stock 2'].std()},\n",
+    "    index = ['Standard deviation']\n",
+    "))\n",
+    "\n",
+    "# Standard error\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': df['Stock 1'].sem(), 'Stock 2': df['Stock 2'].sem()},\n",
+    "    index = ['Standard error']\n",
+    "))\n",
+    "\n",
+    "# Coefficient of Variation\n",
+    "stats_df = stats_df.append(pd.DataFrame(\n",
+    "    {'Stock 1': stats_df['Stock 1'].loc['Standard deviation'] / stats_df['Stock 1'].loc['Mean'],\n",
+    "     'Stock 2': stats_df['Stock 2'].loc['Standard deviation'] / stats_df['Stock 2'].loc['Mean']},\n",
+    "    index = ['Coefficient of Variation']\n",
+    "))\n",
+    "\n",
+    "display(stats_df)\n",
+    "\n",
+    "print(\"Correlation\", stats.pearsonr(df['Stock 1'], df['Stock 2']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "ca5119c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Months\n",
+       "1        NaN\n",
+       "2        NaN\n",
+       "3        NaN\n",
+       "4        NaN\n",
+       "5        NaN\n",
+       "6        NaN\n",
+       "7    -0.1591\n",
+       "8        NaN\n",
+       "9        NaN\n",
+       "10       NaN\n",
+       "11       NaN\n",
+       "12       NaN\n",
+       "13       NaN\n",
+       "14       NaN\n",
+       "15       NaN\n",
+       "16       NaN\n",
+       "17       NaN\n",
+       "18       NaN\n",
+       "19       NaN\n",
+       "20       NaN\n",
+       "21       NaN\n",
+       "22       NaN\n",
+       "23       NaN\n",
+       "Name: Stock 1, dtype: float64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Stock 1'].where(df['Stock 1'] == -0.1591)"
    ]
   },
   {
@@ -60,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26988ff7",
+   "id": "0caea25d",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>"
@@ -68,25 +594,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "e650d9a8",
+   "execution_count": 29,
+   "id": "c702f09e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of winning 4 times: 5.42659%\n",
-      "Probability of winning at least 7 times: 0.02675%\n"
+      "(a) Probability of winning 4 times: 5.42659%\n",
+      "(b) Probability of winning at least 7 times: 0.02675%\n"
      ]
     }
    ],
    "source": [
     "# Item (a): Win 4 times\n",
-    "print(\"Probability of winning 4 times: {:,.5f}%\".format(stats.binom.pmf(4, 10, 1/6)*100))\n",
+    "print(\"(a) Probability of winning 4 times: {:,.5f}%\".format(stats.binom.pmf(4, 10, 1/6)*100))\n",
     "\n",
     "# Item (b): Win at least 7 times\n",
-    "print(\"Probability of winning at least 7 times: {:,.5f}%\".format((1 - stats.binom.cdf(6, 10, 1/6))*100))"
+    "print(\"(b) Probability of winning at least 7 times: {:,.5f}%\".format((1 - stats.binom.cdf(6, 10, 1/6))*100))"
    ]
   },
   {
@@ -97,12 +623,12 @@
     "<hr style=\"height:1px;background-color:#999;boder:none\" />\n",
     "<h2> Q4 </h2>\n",
     "\n",
-    "(Source: Fávero and Belfiore, 2017, Cap. 5) Assume that a student hit three question for each five trials. Determine the probability of a student hit 12 questions in 20 trials."
+    "(Source: Fávero and Belfiore, 2017, Cap. 5) Assume that a student hit three questions for each five trials. Determine the probability of a student hit 12 questions in 20 trials."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c440c280",
+   "id": "7cfc9255",
    "metadata": {},
    "source": [
     "<h3>Answer</h3>"
@@ -111,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c3624c31",
+   "id": "0f44334e",
    "metadata": {},
    "outputs": [
     {
