--- a/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
+++ b/MBA Data Science/Fundamentals of Statistics/Exercise List/Python Solutions.ipynb
@@ -13,7 +13,7 @@
    "id": "5f1a7d57",
    "metadata": {},
    "source": [
-    "## Lirabries"
+    "## Libraries"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f596e766",
+   "id": "e45e6869",
    "metadata": {},
    "source": [
     "<h3>Answer:</h3>"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "1eb53304",
+   "id": "ebda1f85",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "9f9740f1",
+   "id": "3397b7a6",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "eb99ec42",
+   "id": "cefa64a7",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 92,
    "id": "26765278",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
        "5        0.1296   0.2055"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "id": "46238b30",
    "metadata": {},
    "outputs": [
@@ -1118,16 +1118,6 @@
       "Test statistic (Student's t-test): 1.39290\n",
       "p_value (Student's t-test): 0.17822\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.29081897658677186, 0.1782207826223213)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1241,8 +1231,7 @@
     "test_statistic = r * np.sqrt((df.shape[0] - 2)/(1 - r**2))\n",
     "print(\"Correlation: {:,.5f}\".format(r))\n",
     "print(\"Test statistic (Student's t-test): {:,.5f}\".format(test_statistic))\n",
-    "print(\"p_value (Student's t-test): {:,.5f}\".format(p_value))\n",
-    "stats.pearsonr(df['Stock 1'], df['Stock 2'])"
+    "print(\"p_value (Student's t-test): {:,.5f}\".format(p_value))"
    ]
   },
   {
