Added conclusion section on Bootstrap/Bootstrap Simulation.ipynb

--- a/Bootstrap/Bootstrap Simulation.ipynb
+++ b/Bootstrap/Bootstrap Simulation.ipynb
@@ -2,26 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97f165c5",
+   "id": "72ca708f",
    "metadata": {},
    "source": [
-    "# Confidence interval through bootstraping and Student's t assumption"
+    "# Confidence interval through bootstrapping and Student's t assumption"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ea7f0dcb",
+   "id": "faa24166",
    "metadata": {},
    "source": [
     "In this program, we shall verify how robust is the confidence interval estimated from non-normal sample (exponentially distributed) through two methods:\n",
     "\n",
-    "(1) bootstraping <br>\n",
+    "(1) bootstrapping <br>\n",
     "(2) Assuming a t distributed sample (kwoning that they are not)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9685986",
+   "id": "632407e1",
    "metadata": {},
    "source": [
     "## Libraries"
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "7711118c",
+   "execution_count": 173,
+   "id": "3356fd2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,15 +41,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d49d28d",
+   "id": "ea20214c",
    "metadata": {},
    "source": [
-    "## Confidence interval by bootstraping"
+    "## Confidence interval by bootstrapping"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dc333470",
+   "id": "916217b2",
    "metadata": {},
    "source": [
     "Defining some functions"
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "eb85f5e7",
+   "execution_count": 174,
+   "id": "d2dbdfbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcd9cb3b",
+   "id": "85a84c90",
    "metadata": {},
    "source": [
     "Perfoming the sampling <code>n_total</code> and testing if the populational mean is within the estimated confidence interval"
@@ -100,15 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "0793373c",
+   "execution_count": 183,
+   "id": "6461b323",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The population mean was between the estimated confidence interval 98.00%\n"
+      "The population mean was between the estimated confidence interval 99.00%\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "768658b0",
+   "id": "119325e9",
    "metadata": {},
    "source": [
     "## Confidence interval by Student's t assumption"
@@ -136,23 +136,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccf7a4dd",
+   "id": "117fdc7c",
    "metadata": {},
    "source": [
-    "Let us assuming the sample normally distributed and, then, calcu"
+    "Let us assuming the sample normally distributed, even though we know they are not, and then let us evaluate the confidence interval using a Student's t distribution. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "841dec62",
+   "execution_count": 182,
+   "id": "7f2d872c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The population mean was between the estimated confidence interval 91.80%\n"
+      "The population mean was between the estimated confidence interval 92.00%\n"
      ]
     }
    ],
@@ -172,6 +172,22 @@
     "    if (pop_mean >= conf_inter[0]) and (pop_mean <= conf_inter[1]): n_in += 1\n",
     "        \n",
     "print('The population mean was between the estimated confidence interval {:.2f}%'.format(100 * n_in / n_total))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d89fe7c",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5fddfef",
+   "metadata": {},
+   "source": [
+    "The bootstrapping approach always obtain a estimated confidence interval which includes the populational mean at least 95% of the time, whilst the Student's t approach rarely reproduces the desired result. If we run "
    ]
   }
  ],
